# Andromeda

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
Api/: CMakeLists.txt
Api/Andromeda/Application/: IApplication.hpp
Api/Andromeda/Camera/: ICamera.hpp  ICameraView.hpp  IPerspectiveControl.hpp
Api/Andromeda/Engine/: IEngine.hpp
Api/Andromeda/GraphicsContext/: IGraphicsContext.hpp
Api/Andromeda/Light/: IDirectionalLight.hpp  ILight.hpp  ILuminousBehavior.hpp  INonLuminousBehavior.hpp  IPointLight.hpp
Api/Andromeda/MacroExports/: MacroExports.hpp
Api/Andromeda/Objects/: ICube.hpp  IGeometricObject.hpp  ILuminous.hpp  IMesh.hpp  IObject.hpp  IRenderableObject.hpp  ISkyroom.hpp  ISphere.hpp  ITransformable.hpp
Api/Andromeda/Platform/: IPlatform.hpp
Api/Andromeda/RenderableObjects/: ILuminous.hpp  IMesh.hpp  IRenderableObject.hpp  ISkyroom.hpp  ISphere.hpp
Api/Andromeda/Renderer/: ICameraControl.hpp  IRenderer.hpp  ISizeControl.hpp
Api/Andromeda/Scene/: IScene.hpp  ISceneEnvironment.hpp  ISceneLighting.hpp  ISceneObjects.hpp  ISceneState.hpp
Api/Andromeda/Window/: EventType.hpp  IEvent.hpp  IWindow.hpp
Api/Camera/: ICamera.hpp  ICameraController.hpp  ICameraView.hpp  IPerspectiveControl.hpp
Api/Engine/: GraphicsBackend.hpp  IEngine.hpp
Api/GraphicsContext/: IGraphicsContext.hpp
Api/MacroExports/: MacroExports.hpp
Api/RenderableObjects/: ILuminous.hpp  IMesh.hpp  IRenderableObject.hpp  IRenderableObjectOpenGL.hpp  ITransformable.hpp
Api/Renderer/: ICameraControl.hpp  IGridControl.hpp  IIlluminationControl.hpp  IRenderer.hpp  ISizeControl.hpp
Api/Scene/: IScene.hpp  ISceneEnvironment.hpp  ISceneLighting.hpp  ISceneObjects.hpp  ISceneState.hpp
Api/Window/: IWindow.hpp
Api/include/: IEngine.hpp  IRenderer.hpp  IScene.hpp
CPP/: CMakeLists.txt
CPP/Andromeda/Core/: CMakeLists.txt
CPP/Examples/EarthRotatingAroundSun/: CMakeLists.txt  main.cpp
Context/: CMakeLists.txt
Context/GLFWContext/include/: GLFWContext.hpp  GLFWContextImpl.hpp
Context/GLFWContext/src/: GLFWContext.cpp  GLFWContextImpl.cpp
Core/: CMakeLists.txt
Core/include/: EngineRunner.hpp  EngineRunnerImpl.hpp
Core/src/: EngineRunner.cpp  EngineRunnerImpl.cpp
EngineCore/: CMakeLists.txt
EngineCore/Application/include/: Application.hpp  ApplicationImpl.hpp  CameraInputMapper.hpp
EngineCore/Application/src/: Application.cpp  ApplicationImpl.cpp  CameraInputMapper.cpp
EngineCore/Engine/include/: Engine.hpp
EngineCore/Engine/src/: Engine.cpp
EngineCore/EngineRunner/include/: EngineRunner.hpp  EngineRunnerImpl.hpp
EngineCore/EngineRunner/src/: EngineRunner.cpp  EngineRunnerImpl.cpp
EngineCore/Events/include/: Event.hpp  EventDispatcher.hpp  EventType.hpp  FramebufferEvents.hpp  KeyEvents.hpp  MouseEvents.hpp
EngineCore/Events/src/: Event.cpp  EventDispatcher.cpp  MouseEvents.cpp
EngineCore/GLFWContext/include/: GLFWContext.hpp
EngineCore/GLFWContext/src/: GLFWContext.cpp
EngineCore/GLFWWindow/include/: GLFWWindow.hpp  GLFWWindowImpl.hpp
EngineCore/GLFWWindow/src/: GLFWWindow.cpp  GLFWWindowImpl.cpp
EngineCore/MacroExports/include/: MacroExports.hpp
EngineCore/MouseAndKeyCodes/include/: KeyCodes.hpp  MouseCodes.hpp
EngineCore/RenderingWindows/include/: GraphicalModalWindow.hpp  ImGuiDockspaceManager.hpp  ImGuiManager.hpp  RendererWindowOpenGL.hpp
EngineCore/RenderingWindows/src/: GraphicalModalWindow.cpp  ImGuiDockspaceManager.cpp  ImGuiManager.cpp  RendererWindowOpenGL.cpp
Environment/: CMakeLists.txt
Environment/RenderableObjects/include/: OpenGLRenderableObject.hpp  OpenGLRenderableObjectImpl.hpp
Environment/RenderableObjects/src/: OpenGLRenderableObject.cpp  OpenGLRenderableObjectImpl.cpp
Environment/Scene/include/: OpenGLScene.hpp  OpenGLSceneImpl.hpp
Environment/Scene/src/: OpenGLScene.cpp  OpenGLSceneImpl.cpp
Example/: CMakeLists.txt  main.cpp
ExternalGraphicsLibs/: CMakeLists.txt
Glad/: CMakeLists.txt
Math/: CMakeLists.txt
Math/LinearAlgebra/include/: LinearAlgebraDataTypes.hpp  LinearAlgebraOperations.hpp
Math/LinearAlgebra/src/: LinearAlgebraOperations.cpp
Math/Trigonometry/include/: Trigonometry.hpp
Math/Trigonometry/src/: Trigonometry.cpp
Math/Utils/include/: Points.hpp
PhysicalProperties/: CMakeLists.txt
PhysicalProperties/Colors/include/: Colors.hpp
PhysicalProperties/MacroExports/include/: MacroExports.hpp
PhysicalProperties/Materials/include/: MaterialTypes.hpp  Materials.hpp  MaterialsLibrary.hpp
PhysicalProperties/Materials/src/: Materials.cpp  MaterialsLibrary.cpp
PhysicalProperties/Space/include/: Points.hpp
PhysicalProperties/Transformations/include/: TransformationTypes.hpp
PhysicalProperties/Vertices/include/: Vertex.hpp
Platform/: CMakeLists.txt
Platform/Platform/include/: Platform.hpp
Platform/Platform/src/: Platform.cpp
PrecompiledHeaders/: CMakeLists.txt
PrecompiledHeaders/include/: pch.hpp
Renderer/: CMakeLists.txt
Renderer/Renderers/include/: OpenGLRenderer.hpp  OpenGLRendererImpl.hpp
Renderer/Renderers/src/: OpenGLRenderer.cpp  OpenGLRendererImpl.cpp
Renderer/Shaders/include/: OpenGLShader.hpp
Renderer/Shaders/src/: OpenGLShader.cpp
Renderer/include/: OpenGLRenderer.hpp  OpenGLRendererImpl.hpp  Renderer.hpp  RendererImpl.hpp
Renderer/src/: OpenGLRenderer.cpp  OpenGLRendererImpl.cpp  Renderer.cpp  RendererImpl.cpp
Rendering/: CMakeLists.txt
Rendering/ShaderProgramSources/: fragment_depth_only.glsl  fragment_luminous_objects.glsl  fragment_non_luminous_objects.glsl  fragment_point_shadow.glsl  fragment_shader.glsl  fragment_shader_illumination.glsl  fragment_shader_non_luminous_objects.glsl  geometry_point_shadow.glsl  vertex_depth_only.glsl  vertex_grid.glsl  vertex_illumination.glsl  vertex_point_shadow.glsl  vertex_shader.glsl
Space/: CMakeLists.txt
Space/MaterialProperties/: material_properties.json
SystemLauncher/: CMakeLists.txt  main.cpp
Utils/: CMakeLists.txt
Window/: CMakeLists.txt
Window/include/: Events.hpp  Window.hpp
Window/src/: Events.cpp  Window.cpp
imgui/: CMakeLists.txt
(+757 files in other folders)
